--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.3",
+    "puppeteer": "^21.0.3",
     "razorpay": "^2.9.1",
     "speakeasy": "^2.0.0"
   },
