--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 PORT=3020
-DATABASE_URL="mongodb://127.0.0.1:27017/ashmil"
+# DATABASE_URL="mongodb://127.0.0.1:27017/ashmil"
+DATABASE_URL="mongodb+srv://rinshid26:26@robocop@cluster0.cixbiwl.mongodb.net/?retryWrites=true&w=majority"
+
+
 SECRET_KEY="usethisAsAKey"
 
 EMAIL_PASS="qubkptxzlleqxujj"
