--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 PORT=3020
-# DATABASE_URL="mongodb://127.0.0.1:27017/ashmil"
-DATABASE_URL="mongodb+srv://rinshid26:26@robocop@cluster0.cixbiwl.mongodb.net/?retryWrites=true&w=majority"
-
+DATABASE_URL="mongodb://127.0.0.1:27017/ashmil"
 
 SECRET_KEY="usethisAsAKey"
 
